syntax = "proto3";

package product;

service ProductService {
  rpc GetProductById (GetProductByIdRequest) returns (Product);
  rpc ListProducts (ListProductsRequest) returns (ListProductsResponse);
}

message Product {
  string id = 1;
  string name = 2;
  double price = 3;
  int32 stock = 4;
  string description = 5;
  string image = 6;
}

message GetProductByIdRequest {
  string id = 1;
}

message ListProductsRequest {
  int32 page = 1;
  int32 limit = 2;
  string category = 3;
}

message ListProductsResponse {
  repeated Product products = 1;
}
